fix capabilities grid spacing

--- a/wp-content/themes/heideandcook/web/sass/layout/_footer.scss
+++ b/wp-content/themes/heideandcook/web/sass/layout/_footer.scss
@@ -22,9 +22,7 @@
       width: 2.5rem;
       height: 2.5rem;;
       border-radius: 50%;
-      text-align: center;
       line-height: rem-calc(28px);
-      vertical-align: middle;
       padding: rem-calc(5px);
     }
   }
